# specbolt

./: .clang-format  .gitignore  .ozy.yaml  CMakeLists.txt  LICENSE  README.md  ShmId.cpp  X11MainWindow.hpp  conanfile.txt  main.cpp
.conan/profiles/: default
.github/workflows/: ci.yml
src/: Logger.cpp  Logger.hpp  ShmId.cpp  ShmId.hpp  X11MainWindow.cpp  X11MainWindow.hpp  main.cpp
src/cpu/: Z80.cpp  Z80.hpp
test/: CMakeLists.txt  SanityTest.cpp
